# braintrashtogold

./: AGENTS.md
retention_app/: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  IMPLEMENTATION.md  README.md  Run_Retention_App.bat  Run_Retention_App.command  docker-compose.yml  pyproject.toml
retention_app/.github/workflows/: ci.yml
retention_app/alembic/: env.py
retention_app/alembic/versions/: 20260302_0001_add_concept_retention_tables.py
retention_app/app/: config.py  main.py
retention_app/app/db/: crud.py  engine.py  models.py
retention_app/app/ingest/: common.py  pdf.py  router.py  rss.py  web.py  youtube.py
retention_app/app/llm/: debug_logger.py  grading.py  openrouter_client.py  prompts.py  question_gen.py  schemas.py
retention_app/finetune/: CLAUDE.md  README.md  requirements.txt
retention_app/scripts/: install_notify_task.bat  notify_check.py  remove_notify_task.bat
retention_app/tests/: conftest.py  test_concept_pipeline.py  test_config_startup_defaults.py  test_content_ingest_pipeline.py  test_grading_schema_validation.py  test_ingest_router_pipeline.py  test_ingest_rss.py  test_ingest_youtube.py  test_main_asyncio_filter.py  test_missing_api_keys.py  test_notifications_smtp.py  test_pdf_text_only.py  test_question_gen_parsing.py  test_question_generation_evidence_validation.py  test_question_schema_validation.py  test_quiz_completion.py  test_reviews_api.py  test_scheduler_concept.py  test_scheduler_email_toggle.py  test_scheduler_v1.py  test_smoke_app.py  test_transcript_reconcile.py  test_web_readability.py
(+41 files in other folders)
