[project]
name = "retention-app"
version = "0.1.0"
description = "Local education retention app"
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
  "fastapi>=0.110",
  "uvicorn>=0.27",
  "jinja2>=3.1",
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "python-dotenv>=1.0",
  "httpx>=0.27",
  "feedparser>=6.0",
  "trafilatura>=1.6",
  "readability-lxml>=0.8",
  "beautifulsoup4>=4.12",
  "pypdf>=4.1",
  "yt-dlp>=2024.2",
  "apscheduler>=3.10",
  "aiosmtplib>=3.0",
  "plyer>=2.1",
  "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[tool.pytest.ini_options]
addopts = "-q"
